--- a/CodePulseAdminPortal/CodePulseAdminPortal.API/appsettings.json
+++ b/CodePulseAdminPortal/CodePulseAdminPortal.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodePulseConnectionString": "Server=localhost; DataBase=CodePulse;TrustServerCertificate=True;Trusted_Connection=True"
+  }
 }
