--- a/CodePulseAdminPortal/CodePulseAdminPortal.API/Properties/launchSettings.json
+++ b/CodePulseAdminPortal/CodePulseAdminPortal.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "CodePulse.API": {
+    "CodePulseAdminPortal.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
